22-03-2011 lucas
- Fixed the listbox element name.

21-03-2011 lucas
- Tests uses select_module list box instead of front page.

28-01-2011 lucas
- Fixed testHowToIncomingEvent
- Fixed testHowToInstanceI18N
- Fixed testHowToOrganisation
- Fixed testHowToOutgoingEvent
- Fixed testHowToPerson

27-01-2011 lucas
- Fixed testHowToCampaign.
- Fixed testHowToCreateEvent.
- Fixed testHowToFullTextSearch

26-01-2011 lucas
- Applied some name convention.
- All the test Page Templates is now rendering without error.